create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header6 cid-rnwQx8SgO2 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=1ixnp8VGENA" id="header6-4">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="header6 cid-rnwQx8SgO2 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=1ixnp8VGENA" id="header6-4">
 
     
 
@@ -100,7 +100,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZmB+8mGtBiR3Xe8rRAMgQPK28qOAvYWVxRsEfsGc8lMk80xyslWs1bf5NElbzyL1M0vehLSsAYmmwiNXv152nG2ojITia+Cp1kAayXI8mQjvfhgRsVDjq60Lx+qnNNYd">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QLPb584Px7SS4YryRQBkbUjT4jN1fTuKR6rvKVi3D6qGH3vjxg5WPCwep4DZaiODInKwW7aMIxnY3MkZSvWsbOLVyi7wiuFiAHFMMnNo4jBmKEMd1LO57Qhh7kBPpSdv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -118,7 +118,7 @@
     </div>
 </section>
 
-<section class="mbr-section info3 cid-rnyKO2I7Ad" id="info3-7">
+<section class="mbr-section info3 cid-rnyKO2I7Ad mbr-parallax-background" id="info3-7">
 
     
 
@@ -494,7 +494,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dvmcCSxmoe2W+u3BIBsS5Hp1M3K2+ogJvtpV3erUJgfCygpkCNRLRbiR+SJk1FuCEvSwNk/Nw0nFgI7nSuafRhmAuhlcMflgkzXMBz7mufHQHhoyl7WYBKU6ygMAvbsc">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eZWm2JkrtgWsIYRajJv0HNKf8r2g+h/L7QAMQPnEaOA7Bwd3WQpBSDJYqJ4vC/PfxGcqjikbLykPTr8REyohUfuYmLuTcBRWXU3vW7c5nbCIW+afzTc6h/7BEX+LUBI2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -618,6 +618,7 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
