create github pages

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 </h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mV7MTOEQV5jvc+xOVg8ys8i3wcWflwFKdCECOKTaINJ0WZt3sKlHUEzWQrW7irLONpTqdDtzZgIfWYk49R43RXWyfkos3W8z9Px5Nq2bL7132mvCKTK2ru9i3ucFosPC">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e5b0i4Yl4mARaZrlzzFytWmlQJ2fD9tyKTdaaVRSEohSjs4CBMOcV3j/ufP70IttI482J64AViqJ3ekcR2CtQOULvovOKe8yQ3svN4Mj99PW/BTp8ew6jZwM1bAI/fjB">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -368,7 +368,7 @@
                 </h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ahXx7pgy7m0gpTdke+OQnbCG0HRH8muRNJeIj8Ystv928eieCkd7L009hZgg2lWDY5TpB1Jxv2Ifj+GTCvCuPi/C6XLTsxvjI9490jjJ3//1k3IPyz8tcP0ayBlLv9ZK">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V359Z2DNF8fPe+bkkmnACYIByPlTjJzctVIcRc7LrO0+HpZxOOvQagNLcGfiFs5J7I5v3A0cew+ghpEj21rRpfNf87YGc2vbbmyONQT5+sQ3+lSDlWc7e8AcQ4a41Tlb">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -406,27 +406,27 @@
                     </div>
                     <div class="soc-item">
                         <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.youtube.com/c/mobirise" target="_blank">
-                            <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://instagram.com/mobirise" target="_blank">
-                            <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://plus.google.com/u/0/+Mobirise" target="_blank">
-                            <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.behance.net/Mobirise" target="_blank">
-                            <span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-behance socicon" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0);"></span>
                         </a>
                     </div>
                 </div>
