--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="container align-left">
         <div class="row justify-content-center mbr-white">
             <div class="mbr-white col-md-12">
-                <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5">Make It Beautiful</h4>
-                <h1 class="mbr-section-title mbr-white mbr-fonts-style align-left display-1">Sell your Product without <br>Selling your Product</h1>
+                <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5"></h4>
+                <h1 class="mbr-section-title mbr-white mbr-fonts-style align-left display-1"><br><br><br><br><br>Sell your Product without <br></h1>
                 <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-left display-7">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, <br>maxime. Minus, mollitia dolorem corrupti expedita.
                 </p>
@@ -114,7 +114,7 @@
         <div class="row main align-items-center">
             <div class="col-md-6 image-element">
                 <div class="img-wrap">
-                    <img src="assets/images/djeff-4-1024x1280.jpg" alt="" title="">
+                    <img src="assets/images/about-m-1140x1166.png" alt="" title="">
                 </div>
             </div>
             <div class="col-md-6 text-element">
@@ -322,7 +322,7 @@
                 </h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tilqXRVYFeaFi7xGmxKRuFMh5JrPbRTLzYiAswXi20E15EPc/mCn9rvBLLOc6779pQ0hMhTUV5hlUZsM8tyveAxe7dmunDFMI8So2qyZ7pFXIyl2nbiBp1kVKbJdhW4m">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w+xduiUy3ZxbW3yyR8yEvXJDUkqeluBz+dyK8uMNumA0aMiZlSu7axjvsp22Zi2E1ilVxsqDpws9nYlLSuBQpOx6hu4Z4Jd1jC0Xs1Y0WWhQnIAjvU8PXAvH2fmrhBDG">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -366,7 +366,7 @@
                 </h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pas7jQ7LQuSxl5oSooWqjWSn9v4xJdVHkPTQMPHGWVEMFhOAJEPJbbf4QB1jh0yk6vzzbw/K83KDej1rD+bY/4Zppe/qLFiRC/Ioi2sZ2QBpQFE92cdbZVmmlWL/qQCi">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zg/8uaRqerWYeTCbNsXAykyIbXPNVB845xH1ctx+Db1letqa+hXU1ftD6/lNuQv01zpXEewMVWRyjMIssIJW3V4yyQhG8kE0eG6xP6Gs1WSq9PAhH8OfJXcoaj/nbxO+">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
