--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="mbr-white col-md-12">
                 <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5"></h4>
                 <h1 class="mbr-section-title mbr-white mbr-fonts-style align-left display-1"><br><br><br><br><br>Djeffson Athis&nbsp;<br></h1>
-                <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-left display-7">An entrepreneur who wants you to improve your life<br>and be economically empowered</p>
+                <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-left display-7">An entrepreneur who wants you to improve<br> your life and be economically empowered</p>
                 <div class="mbr-section-btn align-left"><a class="btn-warning btn btn-lg display-4">Work With Me</a></div>
             </div>
         </div>
@@ -320,7 +320,7 @@
                 </h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uyUV5vFjQwoyXffudqv9QgHyT1CMW90jrKZHOVihrf85Lgl07g0hsVckU4uIanKpNu2JTgTtEDVzWyDpGrtZGzkZdQg0HjbgyxPyems6iJmAImfCMSibiaZz5Sch+IsE">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dxge8hMFO1iaw7eFXB9sMkLC64TWNbPCu7c1qg1RZ3jDMe8pDf4mzupon1ZJszZ82AtoMF/GpYc2G/Bx0nLR3d4wCy471yrPPX0qUKVW9DRxwck1H0t7bXkCIp+46+/X">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -364,7 +364,7 @@
                 </h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eiAsQZY/RhQwZbXBV34B8t9/BJrsWOf/MGf5tQSr7duhu4LoV8LfkvYqV1vCi6wyugMVWQHrUWR2dco+jVHXskVOTB6wtWZeCKcY3UzTscwQgjxzwbNmKl5wKf4Y3UvH">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rlC7n15uFiWxVcgVFv0c73enfw8Xsfcy+7iQR0tUfyN9lGyvPQrtjrwh2RLtX9Xkj5bCnUWgSRknhxJBA876GS20xhqk9/NKIRGYLxaM54milWalFXRvjLxpkfTZsZe3">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
