create github pages

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
-                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.facebook.com/Athisdjeffson/videos/281720742729665/"></iframe>
+                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://youtu.be/g00N9YXxnjk"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
@@ -170,7 +170,7 @@
                         Youtube Channel</h2>
                     <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-7">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos aliquam, fugit odio porro quas molestiae</p>
-                    
+                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-white display-4" href="https://mobirise.com">Go Subscribe</a></div>
                 </strong></div><strong>
             </strong></div><strong>
         </strong></div><strong>
@@ -343,7 +343,7 @@
                 </h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="j147mA+7+Ruz1gr66d6czyXPgFWyDi13ITsvn7s3+U5qHNXbnQIUyP5oeTkViA5oucM9c0vECKw5RZlizV8YjfzxtsR03Gp95J+JwQlegpn0ShsHIQQz/mY5uZ1E2wFu">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PV8hK/HplEsCTEsyY916lcMcUtkGV12eZOFNBCH8I6IloFq8re9MDMG8gKzRMi9+0O7eOSfgnPigxBp0SJur+YJW0KlZ4k03jrWT57M0qTCsbtbx1ig9QCxgfMkBLWTU">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -387,7 +387,7 @@
                 </h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="19yvZmS14IFKpUGoKv26BNe9LYhfHYWS2Vxx91H4hqLd11L6X5EbPR9bIWNxsU8MNThDM6Wt8M/kDkv3MGv3ccX3FP+37NKHtDm5lmOYLoSVrb3YxABMsQVqwLB/Og70">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sqo/Ryo3rm+4EDp7xvevJlEN4cw8y09Pta4UQ8iezDb830+D5yvdajNLV/bSB1d4oqrGhJnNGm75rw4qvGSYrPtzRWNQbLJHcUpvIgwNQNWYqF1FlZw7g6WYu6U/lUQJ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
