--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -380,7 +381,7 @@
                 </h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sCIN2kx8egHPpcXFxA0127TSMhTD/FvnAQXCus3wNfHhW2tWLOGZ4viKtMz5iFdcErn/6Slu2fgtKi7KlInMXBF7juQgFWDYwV10jiPFQLXHZCPWL11l4sDdm9jYa113">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kYdX9iV0cd0bDT9XnL71w0ArpPV60tkcRKSHXpYeXuGFyK6THZSWx7Gkb/hqoHvUqvZ5xuqLhPn0r2mYopwgIRXmJ/6c2IIkMMw8aDcdwdJ5L4t9IZmT0t+hZ5LKRnVD">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -424,7 +425,7 @@
                 </h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0N/rbO5pjWsc/ZCiIbE/O1Nt6d2XcqBh1b0tZOYbMZs2A5t2GWD3v/TgJwBP8KG1WdKwBnMa75Oa4Jv5oHjOOW5bK34y1Pru6qvrh3rnIf3DDBaJcyCjkPUrIIAubKEI">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jFtRTzj+mvgeKV+P6PwaXiwKcdtrT6hqukuJUOPv9wLThakEwsEu6O+5gwN5toDwPTADOe1MmphApkLjbJiEuWGqBAn6mNwapRaBNUWK/cF2aIV7sPrrGia+wR4mQQHX">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -522,6 +523,7 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/mbr-animated-bg-text/mbr-animated-bg-text.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
@@ -529,5 +531,6 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
