--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
             <div class="col-md-12">
                 <h3 class="mbr-fonts-style mbr-section-subtitle mbr-bold align-left display-2"><br><br><br><br><br><br><br><br><br>I Want To</h3>
                  <h1 class="mbr-section-title align-left py-2 mbr-bold mbr-fonts-style display-1">
-                    Help you improve<br>On your life</h1>
-                <p class="mbr-text align-left py-2 mbr-fonts-style display-5">
-                    See How I can Help You Further</p>
+                    Help You Improve<br>On Your life</h1>
+                
                 <div class="mbr-media show-modal align-center py-2">
                     <div class="btn-play" data-modal=".modalWindow">
                        <span class="play"></span> 
@@ -326,7 +325,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5">GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZkPgEpU4wwYzLMemEPKro6MLAuOZ1QWtCrrgDQLz3mtafH9y+uQxfnryVl4WDmJe3b1woKWd6PzwdL0KbqpXjc+P7YA7ajhCNgoK1WDooBp/TlwySviAtov/krbkDSnC">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zfY2Qu6I+6kE+uh/Zsn8Obxq9tVk8Bsk53dUQ4i3482G9t5Vqcpqqbloz4i+IHgFRlu+5hUdsrZut/sAP7lhWDoTS9I+4G/qd97ifgOzdFu/QED1HRo91AHpD5GPK2X7">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
