--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="text-content">
                     <h4 class="mbr-section-subtitle mbr-fonts-style mbr-white align-left display-5"><strong>Looking to know how to scale your business?</strong></h4><strong>
                     <h2 class="mbr-title pt-2 mbr-fonts-style align-left mbr-white display-2">My Youtube Channel</h2>
-                    <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-7">Is dedicated to help <b>YOU</b>&nbsp;master business skills that you need in order to succeed in your entrepreuneurial career. From Sales Techniques, to Online Marketing strategies (Facbeook Ads, Instagram Ads, How To Get Viral), I just provide up front the lessons I wish I had when I was starting&nbsp;</p>
+                    <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-7">Is dedicated to help <b>YOU</b>&nbsp;master business skills that you need in order to succeed in your entrepreuneurial career. From Sales Techniques, to Online Marketing strategies (Facbeook Ads, Instagram Ads, How To Get Viral), I just provide up front the lessons I wish I had when I was starting.</p>
                     <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-white display-4" href="https://www.youtube.com/channel/UCNuCnGoyGEdvAnExAcBpbuQ?sub_confirmation=1">Subcribe Right Now</a></div>
                 </strong></div><strong>
             </strong></div><strong>
@@ -325,7 +325,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T+5VbtnJC816CcSpcmzhTTY+Gwp2CZYiMJ2RfwnNFVBAEVswRuevtq9ReUdI9+HrGwCuEVU6yxhb16NhFDUBPxuUdtoDXQgRicCN96JZ5xhgRbWtwV9uFGl6sY7vEhZf">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DbXjmn0Q7GlGbuLr0iJRqXdmN28Jw/0d6ElXvb31uP3FkQWGJ2J0ebs+3ToeFwr5oYNVe7yZWIoKrwm8iqYA7e99qBSyazjSruA2+3HF7A1K0bECzyZuvnioaLKJU9xe">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
