create github pages

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="btn-play" data-modal=".modalWindow">
                        <span class="play"></span> 
                     </div>
-                    <div class="mbr-section-btn align-left"><a class="btn btn-lg btn-white display-4" href="https://calendly.com/consulting-10/15">I Need Your Help</a></div>
+                    <div class="mbr-section-btn align-left"><a class="btn btn-lg btn-white display-4" href="https://calendly.com/consulting-10/15">Book A Call With Me</a></div>
                 </div>
                  
             </div>
@@ -149,7 +149,7 @@
                     <div class="mbr-section-text">
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-5">From barely being able to make ends meet to selling ice cream in the streets of Haiti to fend for his personal needs, migrating to a new country, experiencing setbacks while trying to find a stable source of income, and finally experiencing his first big break, Djeffson Athis is the epitome of hard work, sacrifice, and perseverance. He braved life’s biggest challenges to create a better life for himself and his loved ones, found his niche in the business industry, became an established millionaire, and is now determined to empower other entrepreneurs to achieve the same. <br></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary display-4" href="https://calendly.com/consulting-10/15">Work With Me</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary display-4" href="https://calendly.com/consulting-10/15">Book A Call With Me</a></div>
                 </div>
             </div>
         </div>
@@ -225,7 +225,7 @@
                     <div class="mbr-section-text">
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-5"><strong>-You do not know how to start?</strong><br><strong>-You don't know how to scale?</strong><br><strong>-You need to know how to Sell?</strong><br><strong>-You want to know my online marketing tactics?</strong><br><strong>-You want to avoid the mistakes I've made?</strong><br><br>If you answered Yes to any of those questions, you should probably go on a phone call with one of my agents. I offer a <strong>6 weeks coaching program</strong> where you work directly with me, so I can show you the steps I've taken to make a <strong>MILLION IN REVENUE UNDER A YEAR </strong>with my second company. I take you through Branding, Online Marketing strategies (Facbeook Ads, Instagram Ads), Sell strategies and the Psychology behind them so you can replicate the same thing I did, and get the same results I got.</p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary-outline display-4" href="https://calendly.com/consulting-10/15">Coach Me!</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary-outline display-4" href="https://calendly.com/consulting-10/15">Book A Call With Me</a></div>
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left mbr-white display-5">
                             I was fortunate enough to build two 7 figures businesses. <br><br><strong>Athis Enterprises</strong> is a Sales and Marketing company that ensures best results for your company. We partner with fortune 500 companies such as Verizon to help them increase their sales. We are now also offering our services to small businesses and individuals who are looking to dominate their industry through the latest Online marketing strategies.&nbsp;<br><br><strong>Longbido </strong>is an All-Natural product For Premature Coming and Erectile Dysfunction. We've made over a <strong>MILLION UNDER A YEAR, </strong>covering a large&nbsp;marketplace with clients all over the world (Europe, Asia, America)<br><br></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary-outline display-4" href="https://calendly.com/consulting-10/15">Show Me The Path</a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-primary-outline display-4" href="https://calendly.com/consulting-10/15">Book A Call With Me</a></div>
                 </div>
             </div>
         </div>
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JoH8X7poG9xH1mV1daYmGx+mwYt4ZiK3U/WUQAZaBGKBYz8dNYET8YIZlGQsAs7P//2PWW1pTtrsCvMg8k93446vzUCaphJQJ826TCCg9uPsugXEuDlVRhMxzJxkr4N2">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2u7/tEXdlhcKlvdoHzAhFaZWU27mrGBRMorgsQW1YYrVJkEC1GrYJdu5nkXOeERGtr+HkKcKuZS/EztPB2kAVdCa5QUSXEsTIsFfKUBwlTgc3NjdY6iqyj/7rHZX+tdH">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
