create github pages

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="modalWindow-container">
                 <div class="modalWindow-video-container">
                     <div class="modalWindow-video">
-                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://youtu.be/g00N9YXxnjk"></iframe>
+                        <iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/watch?v=R2MDGJhWu-M&amp;ab_channel=AthisEnterprisesIsSalesAndMarketing"></iframe>
                     </div>
                     <a class="close" role="button" data-dismiss="modal">
                         <span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TRPBeETPy9s84+oWNZ0UDWcTOz/MZMW8XNsqLk+EQyamFqZrGBXv6I7AYrUkjqWtWGSoATl4TLMquY8tiqqUrLoU6QQGIbakNTrgLmNvBOV0T78MN+IRXvth7vNBrF1z">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DIeUrmwKCe2XVGEGhLVGjbQh53CC27nE1nla8w5npUV0h6fCQI6dx49VDnNjBpCDcLld4E871EnFm28g5GsbwmRmtwQ1ecY3NEs+T3eXFn9l8k9Vgfgf8E0dGCEEuoCz">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
