create github pages

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-primary display-4" href="index.html#features17-h">
+                    <a class="nav-link link text-white display-4" href="index.html#features17-h">
                         MY STORY</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-primary display-4" href="index.html#features4-3">
+                    <a class="nav-link link text-white display-4" href="index.html#features4-3">
                         YOUTUBE</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#header7-7">
-                        MY BOOK</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features17-c">
-                        PERSONAL COACHING</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features17-f">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#header7-7">
+                        MY BOOK</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features17-c">
+                        PERSONAL COACHING</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features17-f">
                         MY COMPANIES</a></li></ul>
             <div class="icons-menu">
               <div class="soc-item">
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DIeUrmwKCe2XVGEGhLVGjbQh53CC27nE1nla8w5npUV0h6fCQI6dx49VDnNjBpCDcLld4E871EnFm28g5GsbwmRmtwQ1ecY3NEs+T3eXFn9l8k9Vgfgf8E0dGCEEuoCz">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d2JIy1PGYYQfGFvYy6u0c+nSO+nIWhEq4P1nlT7y5t5UnOMhdTcr+lkg9xVQYefg8HfF2d4ugo3D1MHHqAU05RJIDuxdAZnJYuZtIyUkQW9fYrdEGrrEcpco5KS7EaL9">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
