create github pages

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="mbr-white col-md-6">
-                <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5"><strong>From Selling Ice Cream in the Streets of Haiti, To Owning</strong><br><strong>Two Sucesfull 7 Figure Businesses In the US</strong></h4>
+                <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5"><strong>From Selling Ice Cream in the Streets of Haiti, To Owning</strong><strong><br></strong><strong>Two Sucesfull 7 Figure Businesses In the US</strong></h4>
                 <h1 class="mbr-section-title mbr-white mbr-bold mbr-fonts-style align-left display-1">THE PRINCIPLES YOU NEED TO DO THE SAME</h1>
                 <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-left display-5">I've written multiple books that teach you how to master Facebook Ads and the principles to succeed in Droshipping!</p>
                 <div class="mbr-section-btn"><a class="btn btn-lg btn-white display-4" type="submit" href="https://www.amazon.com/Djeffson-Athis/e/B08H2D879C?ref=sr_ntt_srch_lnk_1&qid=1605078267&sr=8-1">Get My Books</a></div>
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d2JIy1PGYYQfGFvYy6u0c+nSO+nIWhEq4P1nlT7y5t5UnOMhdTcr+lkg9xVQYefg8HfF2d4ugo3D1MHHqAU05RJIDuxdAZnJYuZtIyUkQW9fYrdEGrrEcpco5KS7EaL9">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="141qgZ3GGqM3ZHQNmRpWnPpdl4S6QjU1WYzTPE+rHxb78y8SzANiXuhiG/K4//YWqI/Fa0Pm6ZZ1ljfqSKZZ4EWN51t0/fGD4ZOA+JktzKQnKIQ6MIdpk4oL5otNnvRY">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
