create github pages

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="141qgZ3GGqM3ZHQNmRpWnPpdl4S6QjU1WYzTPE+rHxb78y8SzANiXuhiG/K4//YWqI/Fa0Pm6ZZ1ljfqSKZZ4EWN51t0/fGD4ZOA+JktzKQnKIQ6MIdpk4oL5otNnvRY">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SJnzPECkH2XpZ47oHLXvBkJb/TWX3GglfkFauzZXwzlR4ui/tArrzdzfyI/h0SIqpvZZRYigBUBw/9dURW2wczWtaToEu5oPd6vM9eW+OzcFmM6owoTwEd7sC1KG9m8u">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -382,7 +382,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="icon-transition" href="https://www.instagram.com/theimmigrantshustle/">
+                      <a class="icon-transition" href="https://www.instagram.com/athisdjeffson" target="_blank">
                         <span class="mbr-iconfont socicon-instagram socicon"></span>
                       </a>
                     </li>
