--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="row  align-items-center">
             <div class="col-md-12">
-                <h3 class="mbr-fonts-style mbr-section-subtitle mbr-bold align-left display-2"><br><br><br><br>I Help Business Owners</h3>
+                <h3 class="mbr-fonts-style mbr-section-subtitle mbr-bold align-left display-2"><br><br><br><br>I Help Entrepreneurs</h3>
                  <h1 class="mbr-section-title align-left py-2 mbr-bold mbr-fonts-style display-1">Scale Their Businesses Online</h1>
                 
                 <div class="mbr-media show-modal align-center py-2">
@@ -332,7 +332,7 @@
                 <h3 class="mbr-fonts-style mbr-fonts-style mbr-section-subtitle align-center display-5"><strong>GET ON THE BOOK WAITLIST - GET MY PERSONAL COACHING - OR SEND ME ANY OTHER SORT OF MESSAGE</strong></h3>
                 <div class="form-wrap pt-4" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SJnzPECkH2XpZ47oHLXvBkJb/TWX3GglfkFauzZXwzlR4ui/tArrzdzfyI/h0SIqpvZZRYigBUBw/9dURW2wczWtaToEu5oPd6vM9eW+OzcFmM6owoTwEd7sC1KG9m8u">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RqSWBHedGzSVLJdRGjiKkJcqCt9dY0XMuJuTOeSdiyH4XWxtI6i7vEFjsllfBwdPBigO8kI6vKpjzVhxlUsN/l/z6FnkNHRxjHj4dSEopBwTcv5H+/zJC9+bU2aDe4Hb">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
